<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ac" android:layout_width="match_parent"
	android:layout_height="match_parent" android:background="@color/white"
	android:orientation="vertical">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="@color/main_color_yellow_strip"
		android:padding="@dimen/pad_5dp" android:text="@string/report_a_bug"
		android:textColor="@color/white" android:textSize="@dimen/txt_14sp" />

	<LinearLayout android:id="@+id/lla" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:gravity="center_vertical"
			android:orientation="vertical" android:padding="1dp">

			<EditText android:id="@+id/editTextTo" android:layout_width="match_parent"
				android:layout_height="40dp" android:layout_margin="2dp"
				android:layout_weight="1" android:background="@drawable/form_layer"
				android:hint="@string/to_address" android:text="@string/to_address"
				android:inputType="text" android:padding="10dp"
				android:textColorHint="#000" android:textSize="12sp" />

			<EditText android:id="@+id/editTextSubject"
				android:layout_width="match_parent" android:layout_height="40dp"
				android:layout_margin="2dp" android:layout_weight="1"
				android:background="@drawable/form_layer"
				android:hint="@string/email_subject" android:inputType="textEmailSubject"
				android:padding="10dp" android:textColorHint="#000"
				android:textSize="12sp" android:text="@string/report_a_bug" />

			<EditText android:id="@+id/editTextMessage"
				android:layout_width="match_parent" android:layout_height="110dp"
				android:background="@drawable/form_layer" android:hint="@string/provide_details"
				android:inputType="textMultiLine" android:padding="10dp"
				android:textColorHint="#000" android:textSize="12sp" />
		</LinearLayout>

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:gravity="center"
			android:padding="10dip">

			<Button android:id="@+id/btnSend" android:layout_width="match_parent"
				android:layout_height="50dp" android:background="@drawable/button_submit"
				android:drawableLeft="@drawable/button_send_icon" android:gravity="center"
				android:paddingLeft="5dp" android:text="@string/email_send"
				android:textColor="@color/black" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>