<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Left sied Thumbnail image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/image_bg"
        android:padding="3dip" >

        <com.loopj.android.image.SmartImageView
            android:id="@+id/loaderImageView"
            android:layout_width="82dp"
            android:layout_height="73dp"
            android:layout_marginRight="@dimen/pad_5dp"
            android:padding="10dp"
            android:scaleType="fitXY" />
    </LinearLayout>

    <!-- Title Of Song -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:ellipsize="middle"
        android:maxLines="1"
        android:paddingTop="7dp"
        android:singleLine="true"
        android:text="Title"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_16sp"
        android:textStyle="bold" />

    <!-- Artist Name -->

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:ellipsize="middle"
        android:maxLines="1"
        android:text="@string/subtitle"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_10sp" />

    <TextView
        android:id="@+id/dateTimeLogged"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:maxLines="1"
        android:text="@string/datetime"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_10sp" />

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTimeLogged"
        android:layout_toRightOf="@+id/thumbnail"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_5dp"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            android:src="@drawable/ic_nav3" />

        <TextView
            android:id="@+id/latLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:textColor="@color/main_color_gray_dk"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:id="@+id/lotLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lot"
            android:textColor="@color/main_color_gray_dk"
            android:textSize="@dimen/txt_12sp" />

        <TextView
            android:id="@+id/lot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/txt_12sp" />
    </LinearLayout>

    <!-- Rightend Duration -->

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/title"
        android:layout_marginRight="5dip"
        android:background="@drawable/button_submit"
        android:gravity="right"
        android:padding="3dip"
        android:text="@string/case_status_set_to_new"
        android:textColor="@color/black"
        android:textSize="10dip"
        android:textStyle="bold" />

    <!-- Rightend Arrow -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/arrow" 
        android:contentDescription="TODO"/>

</RelativeLayout>